updated html files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section id="about">
         <div class="profile">
-            <img src="Media/jayanth.jpg" alt="" id="jay">
+            <img src="Media/jayanth.png" alt="" id="jay">
             <h2>Hello!</h2>
             <p>I am Jayanth, a student of class 12. I 💖 programming and wish to create my own website where I can share what I know.</p>
         </div>
