--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     </section>
 
     <footer>
-        <a href="www.instagram.com" class="footer-link">Instagram</a>
-        <a href="www.youtube.com" class="footer-link">Youtube</a>
-        <a href="www.linkedin.com" class="footer-link">LinkedIn</a>
-        <a href="www.twitter.com" class="footer-link">Twitter</a>
+        <a href="https://www.instagram.com/" class="footer-link" target='_blank'>Instagram</a>
+        <a href="https://www.youtube.com/" class="footer-link" target='_blank'>Youtube</a>
+        <a href="https://www.linkedin.com/" class="footer-link" target='_blank'>LinkedIn</a>
+        <a href="https://twitter.com/" class="footer-link" target='_blank'>Twitter</a>
         <p>© All rights Reserved ™ Jayanth</p>
     </footer>
 
